[gd_scene load_steps=4 format=3 uid="uid://d2ehw2rc50rne"]

[ext_resource type="Texture2D" uid="uid://dch35chjyfbn7" path="res://assets/sprites/main_menu.png" id="1_kwcv6"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_t3ej1"]
[ext_resource type="PackedScene" uid="uid://os8tmgslpdpn" path="res://scenes/levels/level_one.tscn" id="2_eyqr1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3ej1")
level_one_scene = ExtResource("2_eyqr1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -97.5
offset_right = 180.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(180, 0)
texture = ExtResource("1_kwcv6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="PlayCoopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Co-op"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "High Score: 9999"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TopScorerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "by: JLD"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayCoopButton" to="." method="_on_play_coop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
